# chimera

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bun.lockb  components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
.husky/: pre-commit
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/windows/: create_shortcut.ps1
src-tauri/src/: constants.rs  consts.rs  exec_handler.rs  fs_utils.rs  http_downloader.rs  lib.rs  main.rs
src-tauri/src/cloud_sync/: ludusavi.rs  mod.rs  rclone.rs
src-tauri/src/commands/: fs.rs
src-tauri/src/torrent_downloader/: commands.rs  config.rs  mod.rs  torrent_downloader.rs
src/lib/: bootstrap.ts  constants.ts  helpers.ts  raw-bindings.ts  specta-bindings.ts  utils.ts
src/lib/components/: app-sidebar.svelte  badge.svelte  bottom-panel.svelte  game-card.svelte  header.svelte
src/lib/constants/: char-map.ts  index.ts
src/lib/context/: game-details.context.ts  game.context.ts  index.ts
src/lib/database/: index.ts
src/lib/hooks/: index.ts  is-mobile.svelte.ts  use-download.ts  use-library.ts  use-packs.ts
src/lib/i18n/: index.ts
src/lib/services/: download-sources.ts  games.ts  hydra.ts  library-manager.events.ts  library-manager.ts  sources.ts  steam.ts
src/lib/steam/: api.ts  url-builders.ts
src/lib/types/: index.ts  (+2 more)
src/locales/: en.json  it.json
src/routes/: +layout.svelte  +page.svelte
(+153 files in other folders)
