[package]
name = "chimera"
version = "0.1.0"
description = "Chimera is a game launcher made with Tauri and SvelteKit"
authors = ["Aryxst"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
tauri-plugin-http = { version = "2", features = ["stream"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = { version = "2" }
futures = "0.3.31"
tokio = "1.43.0"
thiserror = "2.0.11"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
